--- a/task-manager/client/vercel.json
+++ b/task-manager/client/vercel.json
@@ -1,20 +1,12 @@
 {
-  "version": 2,
-  "builds": [
+  "rewrites": [
     {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "build" }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "https://task-manager-api.onrender.com/api/$1"
+      "source": "/api/(.*)",
+      "destination": "https://task-manager-api.onrender.com/api/$1"
     },
     {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
